update time to birthday and blessword

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
           <span class="text-base md:text-2xl lg:text-4xl">Seconds</span>
         </div>
       </div>
-      <div
-        class="flex felx-row justify-center items-center mt-10 hidden"
-        id="bless"
-      >
+      <div class="flex felx-row justify-center items-center hidden" id="bless">
         <img src="./pic/snoopy_gif_3.webp" alt="snoopy_gif_3" />
         <div class="flex flex-col gap-4">
-          <span class="font-sans font-bold text-xl" id="yearold">xxx</span>
+          <span
+            class="font-sans font-bold text-xl md:text-2xl lg:text-4xl"
+            id="yearold"
+          ></span>
           <p
-            class="text-balance break-normal font-sans text-base md:text-lg lg:text:xl"
+            class="text-balance break-normal font-sans text-base md:text-lg lg:text-xl"
             id="blessword"
           >
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
