--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
           <span class="text-base md:text-2xl lg:text-4xl">Seconds</span>
         </div>
       </div>
-      <div class="flex felx-row justify-center items-center hidden" id="bless">
-        <img src="./pic/snoopy_gif_3.webp" alt="snoopy_gif_3" />
+      <div class="flex flex-row justify-center items-center hidden" id="bless">
+        <img
+          class="h-full sm:w-1/3 md:w-1/4"
+          src="./pic/snoopy_gif_3.webp"
+          alt="snoopy_gif_3"
+        />
         <div class="flex flex-col gap-4">
           <span
             class="font-sans font-bold text-xl md:text-2xl lg:text-4xl"
