--- a/index.html
+++ b/index.html
@@ -42,19 +42,20 @@
           <span class="text-base md:text-2xl lg:text-4xl">Seconds</span>
         </div>
       </div>
-      <div class="flex flex-row justify-center items-center hidden" id="bless">
-        <img
-          class="h-full sm:w-1/3 md:w-1/4"
-          src="./pic/snoopy_gif_3.webp"
-          alt="snoopy_gif_3"
-        />
-        <div class="flex flex-col gap-4">
+      <div
+        class="flex flex-col justify-center items-center md:flex-row hidden"
+        id="bless"
+      >
+        <img src="./pic/snoopy_gif_3.webp" alt="snoopy_gif_3" />
+        <div
+          class="flex flex-col gap-4 justify-center items-center md:items-start"
+        >
           <span
-            class="font-sans font-bold text-xl md:text-2xl lg:text-4xl"
+            class="font-sans font-bold text-xl md:text-2xl lg:text-4xl m-4"
             id="yearold"
           ></span>
           <p
-            class="text-balance break-normal font-sans text-base md:text-lg lg:text-xl"
+            class="break-normal font-sans text-base md:text-lg lg:text-xl"
             id="blessword"
           >
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
