add m-4 on textbox

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       >
         <img src="./pic/snoopy_gif_3.webp" alt="snoopy_gif_3" />
         <div
-          class="flex flex-col gap-4 justify-center items-center md:items-start"
+          class="flex flex-col gap-4 justify-center items-center md:items-start m-4"
         >
           <span
-            class="font-sans font-bold text-xl md:text-2xl lg:text-4xl m-4"
+            class="font-sans font-bold text-xl md:text-2xl lg:text-4xl"
             id="yearold"
           ></span>
           <p
